--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,20 @@
 version: 2
+
 updates:
-  - package-ecosystem: npm
-    directory: /
+  - package-ecosystem: github-actions
+    directories:
+      - /
     schedule:
       interval: weekly
+
+  - package-ecosystem: npm
+    directories:
+      - /
+    schedule:
+      interval: weekly
+
   - package-ecosystem: terraform
-    directory: /
+    directories:
+      - /terraform/**/*
     schedule:
       interval: weekly
